visibilità start stop sospendi css e termina turno

--- a/code/SAE24/src/main/resources/application.css
+++ b/code/SAE24/src/main/resources/application.css
@@ -1,3 +1,119 @@
+.label{
+	-fx-font-size: 20;
+	-fx-text-fill: black;
+	-fx-font-family: "Calibri Light";
+}
+.labelErr{
+	-fx-font-size: 12;
+	-fx-text-fill: red;
+	-fx-font-family: "Calibri Light";
+}
+#titleLabel{
+	-fx-font-size: 30;
+	-fx-text-fill: black;
+	-fx-font-family: "Calibri Light";
+	-fx-font-weight: bold;
+	
+}
+/* Stile bottone di conferma */
+.buttonConferma {
+
+    -fx-background-color: #3A466A;  /* Colore di sfondo verde */
+    -fx-text-fill: white;            /* Colore del testo bianco */
+    -fx-font-size: 16px;             /* Dimensione del font */
+    -fx-border-radius: 3px;         /* Angoli arrotondati */
+  	-fx-pref-height: 47px;
+	-fx-pref-width: 151px;
+    -fx-border-color: #243054;      /* Colore del bordo verde scuro */
+ 
+
+}
+
+.buttonConferma:hover {
+
+  /*  -fx-background-color: #45a049;  /* Colore di sfondo più scuro quando hover */
+    -fx-border-color: white;      /* Colore del bordo più scuro quando hover */
+
+}
+
+.buttonConferma:pressed {
+
+    -fx-background-color: #243054;  /* Colore di sfondo ancora più scuro quando premuto */
+ /*   -fx-border-color: #2c6b2f;      /* Colore del bordo ancora più scuro quando premuto */
+    
+}
+.buttonMain1{
+	/*-fx-border-color: transparent;  /* Nessun bordo inizialmente */
+	-fx-pref-height: 75px;
+	-fx-background-color: #3A466A;
+	-fx-font-family: "Calibri Light";
+	-fx-font-size: 16;
+	-fx-text-fill: white;
+}
+
+.buttonMain2{
+	/*-fx-border-color: transparent;  /* Nessun bordo inizialmente */
+	-fx-pref-height: 75px;
+	-fx-background-color: #243054;
+	-fx-font-family: "Calibri Light";
+	-fx-font-size: 16;
+	-fx-text-fill: white;
+}
+.buttonMain2:focused{
+	-fx-border-color: yellow;
+}
+
+.buttonMain1:focused{
+	-fx-border-color: yellow; 
+}
+
+.buttonMain2:hover {
+    -fx-border-color: white;
+}
+.buttonMain1:hover {
+    -fx-border-color: white;
+}
+
+.buttonAggiungi {
+	-fx-font-family: "Calibri Light";
+	-fx-font-size: 28;
+	-fx-pref-height: 64px;
+	-fx-pref-width: 64px;
+	-fx-text-fill: black;
+	-fx-background-color: white;
+	-fx-border-color: #3A466A;
+}
+.buttonAggiungi:hover {
+    -fx-background-color: #E8E8E8;
+}
+
+.backPane {
+	-fx-background-color: #EAEEF4;
+	-fx-pref-height: 780px;
+	-fx-pref-width: 1198px;
+	
+}
+
+.passwordField {
+	-fx-pref-height: 36px;
+	-fx-pref-width: 194px;
+}
+.textField {
+		-fx-pref-height: 25px;
+		-fx-pref-width: 250px;
+		-fx-background-color: white;
+		-fx-border-color: #3A466A;
+}
+
+.textArea {
+	-fx-font-family: "Calibri Light";
+	-fx-font-size: 16;
+}
+
+
+
+
+
 .label {
     -fx-font-size: 20px;
     -fx-text-fill: black;
